--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,18 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set up Ruby 3.0
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: '3.0.1'
-
-      - name: Install bundler
-        run: gem install bundler
+          ruby-version: '3.0.x'
 
       - name: Install dependencies
         run: make install
 
-      - name: Linter
-        run: make lint
-
-      - name: Tests
+      - name: Run tests
         run: make test
+
+      - name: Run linters
+        run: make lint
