--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
 
       - name: Set up Ruby 3.0
-      - uses: actions/setup-ruby@v1
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: '3.0.x'
 
