--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Ruby 3.0
-        uses: actions/setup-ruby@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0.2'
+          ruby-version: 3.0.2
+          bundler-cache: true
+
+      - name: Set up Yarn
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+          cache: "yarn"
 
       - name: Install dependencies
         run: make install
