--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -4,16 +4,16 @@ one:
   title: TitleOne
   body: BodyOne
   creator: one
-  post_category: one
+  category: one
 
 two:
   title: TitleTwo
   body: BodyTwo
   creator: two
-  post_category: two
+  category: two
 
 without_like:
   title: Without like post
   body: Without like post
   creator: one
-  post_category: one
+  category: one
